--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       .Title {
         margin: 0;
         margin-top: 3vh;
+        color: black;
       }
 
       .Buttons {
@@ -37,6 +38,7 @@
         border-radius: 100px;
         font-size: 5vh;
         transition: 0.2s;
+        color: black;
       }
 
       .Rock:active {
@@ -53,6 +55,7 @@
         border-radius: 100px;
         font-size: 5vh;
         transition: 0.2s;
+        color: black;
       }
 
       .Paper:active {
@@ -68,6 +71,7 @@
         border-radius: 100px;
         font-size: 5vh;
         transition: 0.2s;
+        color: black;
       }
 
       .Scissors:active {
