--- a/rps.html
+++ b/rps.html
@@ -38,7 +38,6 @@
         border-radius: 100px;
         font-size: 5vh;
         transition: 0.2s;
-        color: black;
       }
 
       .Rock:active {
@@ -55,7 +54,6 @@
         border-radius: 100px;
         font-size: 5vh;
         transition: 0.2s;
-        color: black;
       }
 
       .Paper:active {
@@ -71,7 +69,6 @@
         border-radius: 100px;
         font-size: 5vh;
         transition: 0.2s;
-        color: black;
       }
 
       .Scissors:active {
@@ -90,40 +87,93 @@
     <button class="Rock" onclick="
     const randomNumber = Math.random();
 
+    let computerMove = '';
+
     if (randomNumber >= 0 && randomNumber < 1 / 3) {
-      alert('Rock! ' + 'Tie!');
+      computerMove = 'Rock!'
     } else if (randomNumber > 1 / 3 && randomNumber < 2 / 3) {
-      alert('Paper! ' + 'You Lost!')
+      computerMove = 'Paper!'
     } else if (randomNumber > 2 / 3) {
-      alert('Scissors! ' + 'You Won!')
+      computerMove = 'Scissors!'
     }
+
+    let result = '';
+
+    if (computerMove === 'Rock!') {
+      result = 'Tie!';
+    } else if (computerMove === 'Paper!') {
+      result = 'You Lost!'
+      computerPoints++
+    } else if (computerMove === 'Scissors!') {
+      result = 'You Won!'
+      playerPoints++
+    }
+
+    alert(`You picked Rock! Computer picked ${computerMove} ${result} \n\nPlayer: ${playerPoints} Computer: ${computerPoints}`);
+
     ">Rock</button>
     <button class="Paper" onclick="
 
-    const randomNumber = Math.random();
+const randomNumber = Math.random();
 
-    if (randomNumber >= 0 && randomNumber < 1 / 3) {
-      alert('Rock! ' + 'You Won!');
-    } else if (randomNumber > 1 / 3 && randomNumber < 2 / 3) {
-      alert('Paper! ' + 'Tie!')
-    } else if (randomNumber > 2 / 3) {
-      alert('Scissors! ' + 'You Lost!')
-    }
+let computerMove = '';
+
+if (randomNumber >= 0 && randomNumber < 1 / 3) {
+  computerMove = 'Rock!'
+} else if (randomNumber > 1 / 3 && randomNumber < 2 / 3) {
+  computerMove = 'Paper!'
+} else if (randomNumber > 2 / 3) {
+  computerMove = 'Scissors!'
+}
+
+let result = '';
+
+if (computerMove === 'Rock!') {
+  result = 'You Won!';
+  playerPoints++
+} else if (computerMove === 'Paper!') {
+  result = 'Tie!'
+} else if (computerMove === 'Scissors!') {
+  result = 'You Lost!'
+  computerPoints++
+}
+
+alert(`You picked Paper! Computer picked ${computerMove} ${result} \n\nPlayer: ${playerPoints} Computer: ${computerPoints}`);
+
     ">Paper</button>
     <button class="Scissors" onclick="
+
     const randomNumber = Math.random();
 
-    if (randomNumber >= 0 && randomNumber < 1 / 3) {
-      alert('Rock! ' + 'You Lost!');
-    } else if (randomNumber > 1 / 3 && randomNumber < 2 / 3) {
-      alert('Paper! ' + 'You Won!')
-    } else if (randomNumber > 2 / 3) {
-      alert('Scissors! ' + 'Tie!')
-    }
+let computerMove = '';
+
+if (randomNumber >= 0 && randomNumber < 1 / 3) {
+  computerMove = 'Rock!'
+} else if (randomNumber > 1 / 3 && randomNumber < 2 / 3) {
+  computerMove = 'Paper!'
+} else if (randomNumber > 2 / 3) {
+  computerMove = 'Scissors!'
+}
+
+let result = '';
+
+if (computerMove === 'Rock!') {
+  result = 'You Lost!';
+  computerPoints++
+} else if (computerMove === 'Paper!') {
+  result = 'You Won!'
+  playerPoints++
+} else if (computerMove === 'Scissors!') {
+  result = 'Tie!'
+}
+
+alert(`You picked Scissors! Computer picked ${computerMove} ${result} \n\nPlayer: ${playerPoints} Computer: ${computerPoints}`);
+
     ">Scissors</button>
   </div>
     <script>
-
+      var playerPoints = 0;
+      var computerPoints = 0;
     </script>
   </body>
 </html>
