--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         border-radius: 100px;
         font-size: 5vh;
         transition: 0.2s;
+        color: black;
       }
 
       .Rock:active {
@@ -54,6 +55,7 @@
         border-radius: 100px;
         font-size: 5vh;
         transition: 0.2s;
+        color: black;
       }
 
       .Paper:active {
@@ -69,6 +71,7 @@
         border-radius: 100px;
         font-size: 5vh;
         transition: 0.2s;
+        color: black;
       }
 
       .Scissors:active {
